# ffmpeg-core

./: CMakeLists.txt
.github/workflows/: build.yml
